src/main/java/org/example/myblog/exception/errors/ArticleError.java
package org.example.myblog.exception.errors;

public enum ArticleError {
}
